--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    <img class="logo" src="/img/logo_alura.png" alt="logo de alura">
+    <img class="logo" src="img/logo_alura.png" alt="logo de alura">
 </header>
 <body>
     <main>
